--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=bank
+
+ibm.mq.queueManager=QM1
+ibm.mq.channel=DEV.APP.SVRCONN
+ibm.mq.connName=localhost
+ibm.mq.port=1414
+ibm.mq.user=app
+ibm.mq.password=passw0rd
+
