--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,9 +1,22 @@
 spring.application.name=bank
-
+# MQ
 ibm.mq.queueManager=QM1
 ibm.mq.channel=DEV.APP.SVRCONN
 ibm.mq.connName=localhost
 ibm.mq.port=1414
 ibm.mq.user=app
 ibm.mq.password=passw0rd
+ibm.mq.queue=QUEUE1
+
+# DB
+spring.datasource.url=jdbc:h2:mem:mqdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
 
