--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -7,6 +7,8 @@ ibm.mq.port=1414
 ibm.mq.user=app
 ibm.mq.password=passw0rd
 ibm.mq.queue=QUEUE1
+retry.maxAttempts=2
+retry.maxDelay=100
 
 # DB
 spring.datasource.url=jdbc:h2:mem:mqdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
